# privaxy

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
filterlists-api/: Cargo.toml
filterlists-api/src/: dtypes.rs  get.rs
privaxy/: Cargo.toml
privaxy/debian/: postinst
privaxy/src/resources/: error.html
privaxy/src/server/: blocker.rs  blocker_utils.rs  ca.rs  cert.rs  configuration.rs  lib.rs  metrics.rs  statistics.rs
privaxy/src/server/configuration/: ca.rs  filter.rs  mod.rs  network.rs  updater.rs
privaxy/src/server/proxy/: html_rewriter.rs  mitm.rs  serve.rs
privaxy/src/server/web_gui/: filterlists.rs  filters.rs  metrics.rs  mod.rs
privaxy/src/server/web_gui/settings/: ca_certificate.rs  mod.rs  network.rs
web_frontend/src/: filterlists.rs  general.rs  main.rs  metrics.rs  submit_banner.rs
